--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,14 +2,14 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 0;
+    z-index: -10;
     top: 0;
     -webkit-user-drag: none;
 }
 
 .headerCont{
     position: absolute;
-    z-index: 1;
+    z-index: 11;
     top: 0;
     left: 0;
 }
@@ -27,7 +27,7 @@
     transform: translateX(-50%);
     transition: 0.3s transform;
     transform-origin: left bottom;
-    z-index: 110;
+    z-index: 11;
 }
 
 .appCont{
